--- a/docroot/themes/custom/pnwds/source/css/sass/seattle2020/_forms.scss
+++ b/docroot/themes/custom/pnwds/source/css/sass/seattle2020/_forms.scss
@@ -99,7 +99,7 @@ input[type="search"]::-webkit-search-decoration {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 1;
+    // z-index: 1;
     width: auto;
 
     &:hover,
