--- a/docroot/themes/custom/pnwds/source/css/seattle2020.css
+++ b/docroot/themes/custom/pnwds/source/css/seattle2020.css
@@ -420,7 +420,6 @@ input[type=search]::-webkit-search-decoration {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 1;
   width: auto;
 }
 .inline-form input[type=submit]:hover, .inline-form input[type=submit]:focus,
@@ -553,13 +552,16 @@ body {
   min-height: 100vh;
   flex-direction: column;
 }
+[data-theme=seattle2020] #layout-container > header {
+  background-color: var(--color-grayish-green, #e8eae3);
+}
 [data-theme=seattle2020] #layout-container .navigation {
   position: sticky;
-  z-index: 100;
+  z-index: 503;
   top: 0;
   width: 100%;
-  background-color: var(--color-grayish-green, #e8eae3);
-  min-height: 4.6rem;
+  background-image: linear-gradient(to top, rgba(232, 234, 227, 0) 5%, rgba(232, 234, 227, 0.4) 8%, rgba(232, 234, 227, 0.9) 12%, #e8eae3);
+  min-height: 4rem;
 }
 [data-theme=seattle2020] #layout-container .navigation .inner {
   display: flex;
@@ -568,9 +570,6 @@ body {
   flex-wrap: wrap;
 }
 [data-theme=seattle2020] #layout-container .region-header {
-  display: block;
-  border-top: 0.5rem solid var(--color-grayish-green, #e8eae3);
-  flex: none;
   margin: 0;
 }
 [data-theme=seattle2020] #layout-container main {
@@ -808,9 +807,6 @@ img {
   color: var(--color-attention-accent);
 }
 
-.banner .text-top {
-  z-index: 500;
-}
 .banner .text-top h1 {
   display: block;
   width: auto;
@@ -856,6 +852,7 @@ img {
   position: relative;
   max-width: 72em;
   margin: 0 auto;
+  padding-top: 1rem;
 }
 .banner.image h1,
 .banner.image h2,
@@ -935,9 +932,9 @@ img {
   .banner.image .text-top,
 .banner.video .text-top {
     position: absolute;
-    top: -1vh;
+    top: 0;
     left: 50%;
-    transform: translate(-50%, -0.35em);
+    transform: translate(-50%, 0);
   }
   .banner.image .text-top h1,
 .banner.video .text-top h1 {
@@ -963,6 +960,9 @@ img {
   }
 }
 
+.banner.text {
+  padding-top: 1rem;
+}
 .banner.text .row1 {
   background-color: var(--color-attention-text);
 }
@@ -976,14 +976,14 @@ img {
 .banner.text .text-top {
   text-align: center;
   position: relative;
-  top: -1vh;
 }
 .banner.text .text-top img {
   display: inline-block;
 }
 .banner.text .text-top h1 {
   font-size: 48px;
-  top: -1vh;
+  top: -0.75rem;
+  position: relative;
 }
 .banner.text .skyline {
   align-self: flex-end;
